--- a/src/main/resources/templates/user/write.html
+++ b/src/main/resources/templates/user/write.html
@@ -13,7 +13,6 @@
       <div class="row mb-5 align-items-end  justify-content-center">
        <div class="col-md-6" data-aos="fade-up">
 		<h1>사용자 등록</h1>
-		<span th:text="${test}"></span>
 		</div>
 		</div>
 		
@@ -21,7 +20,7 @@
    	       <div class="col-md-6" data-aos="fade-up">
 			<form name="userForm" id="userForm" action="/user/save" method="post">
 			<div class="form-group">
-				<label for="user_id">아이디</label><br>
+				<label for="user_id">ID</label><br>
 				<input type="text" class="form-control" name="userId">
 			</div>
 			<div class="form-group">
@@ -42,20 +41,17 @@
 			</div>
 			<div class="form-group">
 				<label for="department">부서:</label>
-				<select class="form-control" name="userDeptNo">
+				<select class="form-control" name="deptNo">
 					<option th:each="dept:${deptList}" th:text="${dept.deptNm}" th:value="${dept.deptNo}" ></option>
 				</select>
 			</div>
 			<div class="form-group">
 				<label for="hobbies">취미:</label><br>
 				<div class="form-check form-check-inline">
-					<input th:each="hobbyList:${hobbyList}" class="form-check-input" type="checkbox" value="{hobbyList.hobby_cd}">
-					<label class="form-check-label">독서</label>
-					
-<!-- 					    <input class="form-check-input" type="checkbox" th:field="${formObject.checked}" id="defaultCheck1"> -->
-<!-- 					    <label class="form-check-label" for="defaultCheck1"> -->
-<!-- 					        Checkbox Label -->
-<!-- 					    </label> -->
+					<th:block th:each="hobbyList:${hobbyList}">
+					<input  class="form-check-input" name="hobbyCd" type="checkbox" th:value="${hobbyList.hobbyCd}">
+					<label class="form-check-label" th:text="${hobbyList.hobbyNm}"></label>
+					</th:block>
 				</div>
 			</div>
 			<button type="submit" class="btn btn-primary" id="btnSubmit" >승인요청</button>
@@ -68,6 +64,5 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-</th:block>
 </body>
 </html>
