--- a/src/main/resources/templates/admin/list.html
+++ b/src/main/resources/templates/admin/list.html
@@ -88,7 +88,7 @@
 				<div class="form-check form-check-inline">
 					<th:block th:each="hobbyList,hobby:${hobbyList}">
 					<input  class="form-check-input" type="checkbox" th:value="${hobbyList.hobbyCd}"
-					 name="hobbyCd" th:attr="id=${'hobbyCd' + hobby.index}" >
+					 name="hobbyCd" >
 					
 					<label class="form-check-label" th:text="${hobbyList.hobbyNm}"></label>
 					</th:block>
